force-app/main/default/objects/Mensagem__c/Mensagem__c.object-meta.xml
<CustomObject>
    <description>Responsável pelo registro de mensagens em comunicação com clientes.</description>
    <label>Mensagem</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Nome da mensagem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mensagens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>