force-app/main/default/objects/Mensagem__c/fields/Certificado__c.field-meta.xml
<CustomField>
    <fullName>Certificado__c</fullName>
    <description>Indica o certificado digital atrelado a esta mensagem.</description>
    <inlineHelpText>Indique o certificado digital atrelado a esta mensagem.</inlineHelpText>
    <label>Certificado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>