force-app/main/default/objects/Mensagem__c/fields/ChaveExterna__c.field-meta.xml
<CustomField>
    <fullName>ChaveExterna__c</fullName>
    <description>Indica o identificador desta mensagem no serviço externo.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indique o identificador desta mensagem no serviço externo.</inlineHelpText>
    <label>Chave externa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>