force-app/main/default/objects/Mensagem__c/fields/ChaveExternaCliente__c.field-meta.xml
<CustomField>
    <fullName>ChaveExternaCliente__c</fullName>
    <description>Indica o identificador do cliente no serviço externo.</description>
    <inlineHelpText>Indica o identificador do cliente no serviço externo.</inlineHelpText>
    <label>Chave externa do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>