force-app/main/default/objects/Mensagem__c/fields/ChaveExternaMidia__c.field-meta.xml
<CustomField>
    <fullName>ChaveExternaMidia__c</fullName>
    <description>Indica o identificador da mídia enviada por mensagem, quando houver, no serviço externo.</description>
    <inlineHelpText>Indica o identificador da mídia enviada por mensagem, quando houver, no serviço externo.</inlineHelpText>
    <label>Chave externa da mídia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>