force-app/main/default/objects/Mensagem__c/fields/CodigoStatus__c.field-meta.xml
<CustomField>
    <fullName>CodigoStatus__c</fullName>
    <description>Registra código do status da requisição para aplicativo de mensagens.</description>
    <inlineHelpText>Registra código do status da requisição para aplicativo de mensagens.</inlineHelpText>
    <label>Código do status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>