force-app/main/default/objects/Mensagem__c/fields/CorpoRequisicao__c.field-meta.xml
<CustomField>
    <fullName>CorpoRequisicao__c</fullName>
    <description>Registra o corpo da requisição quando mensagem enviada pela plataforma ou recebida.</description>
    <inlineHelpText>Registra o corpo da requisição quando mensagem enviada pela plataforma ou recebida.</inlineHelpText>
    <label>Corpo da requisição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>