force-app/main/default/objects/Mensagem__c/fields/DataHora__c.field-meta.xml
<CustomField>
    <fullName>DataHora__c</fullName>
    <description>Indica a data e hora da chegada da mensagem no serviço externo.</description>
    <inlineHelpText>Indica a data e hora da chegada da mensagem no serviço externo.</inlineHelpText>
    <label>Data e hora</label>
    <type>DateTime</type>
</CustomField>