force-app/main/default/objects/Mensagem__c/fields/De__c.field-meta.xml
<CustomField>
    <fullName>De__c</fullName>
    <description>Indica o número de telefone do remetente da mensagem.</description>
    <inlineHelpText>Indique o número de telefone do remetente da mensagem.</inlineHelpText>
    <label>De</label>
    <type>Phone</type>
</CustomField>