force-app/main/default/objects/Mensagem__c/fields/LeadMensagem__c.field-meta.xml
<CustomField>
    <fullName>LeadMensagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo responsável por fazer o relacionamento da mensagem com o Lead.</description>
    <inlineHelpText>Campo responsável por fazer o relacionamento da mensagem com o Lead.</inlineHelpText>
    <label>Lead da Mensagem</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Mensagens</relationshipLabel>
    <relationshipName>Mensagens</relationshipName>
    <type>Lookup</type>
</CustomField>