force-app/main/default/objects/Mensagem__c/fields/NomeArquivo__c.field-meta.xml
<CustomField>
    <fullName>NomeArquivo__c</fullName>
    <description>Indica o nome do arquivo quando houver arquivo anexado à mensagem.</description>
    <inlineHelpText>Indica o nome do arquivo quando houver arquivo anexado à mensagem.</inlineHelpText>
    <label>Nome do arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>