force-app/main/default/objects/Mensagem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Registra o status da requisição para o aplicativo de mensagens.</description>
    <inlineHelpText>Registra o status da requisição para o aplicativo de mensagens.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>