force-app/main/default/objects/Mensagem__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Indica o tipo de mensagem recebida, se textual ou mídia, por exemplo.</description>
    <inlineHelpText>Indica o tipo de mensagem recebida, se textual ou mídia, por exemplo.</inlineHelpText>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>