force-app/main/default/objects/Mensagem__c/fields/TipoMidia__c.field-meta.xml
<CustomField>
    <fullName>TipoMidia__c</fullName>
    <description>Indica o típo da mídia enviada na mensagem.</description>
    <inlineHelpText>Indica o típo da mídia enviada na mensagem.</inlineHelpText>
    <label>Tipo de mídia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>