force-app/main/default/objects/Mensagem__c/fields/URLMidia__c.field-meta.xml
<CustomField>
    <fullName>URLMidia__c</fullName>
    <description>Indica a URL para visualização e download da mídia relacionada à mensagem.</description>
    <inlineHelpText>Indica a URL para visualização e download da mídia relacionada à mensagem.</inlineHelpText>
    <label>URL da mídia</label>
    <type>Url</type>
</CustomField>