force-app/main/default/objects/Mensagem__c/recordTypes/WhatsApp.recordType-meta.xml
<RecordType>
    <fullName>WhatsApp</fullName>
    <active>true</active>
    <description>Responsável pelo registro de mensagens recebidas e entregues ao WhatsApp.</description>
    <label>WhatsApp</label>
</RecordType>